# brand-analyzer

./: README.md  pyproject.toml  pytest.ini
app/: run.py
app/core/: registry_test.py  report_builder.py
app/core/file_readers/: __init__.py  csv_reader.py  reader.py
app/src/reports/: constants.py
app/src/reports/average_rating/: report_builder.py  structures.py
brand_analyzer/: run.py
brand_analyzer/core/: exceptions.py  file_reader.py  registry.py  registry_test.py  report_builder.py  structures.py  utils.py
brand_analyzer/core/file_readers/: csv_reader_test.py  reader.py
brand_analyzer/src/: __init__.py
brand_analyzer/src/file_readers/: csv_reader.py
brand_analyzer/src/reports/average_rating/: __init__.py  report_builder.py  report_builder_test.py
src/: command.py  constants.py  schemas.py
src/adapters/: __init__.py  csv_adapter.py
